--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Phoenician:wght@400&family=Noto+Naskh+Arabic:wght@700&display=swap');
+
 :root[data-theme="light"] {
   --text: #060618;
   --background: #f4f4fb;
