--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Phoenician:wght@400&family=Noto+Naskh+Arabic:wght@700&display=swap');
 
 :root[data-theme="light"] {
-  --text: #060618;
-  --background: #f4f4fb;
-  --primary: #3c3b54;
-  --secondary: #b49ab7;
-  --accent: #7a5774;
+    --text: #060618;
+    --background: #f4f4fb;
+    --primary: #3c3b54;
+    --secondary: #b49ab7;
+    --accent: #7a5774;
 }
+
 :root[data-theme="dark"] {
-  --text: #e7e7f9;
-  --background: #04040b;
-  --primary: #acabc4;
-  --secondary: #624865;
-  --accent: #a885a2;
+    --text: #e7e7f9;
+    --background: #04040b;
+    --primary: #acabc4;
+    --secondary: #624865;
+    --accent: #a885a2;
 }
 
 body {
-  font-family: 'Noto Sans Phoenician';
-  font-weight: 400;
+    font-family: 'Noto Sans Phoenician';
+    font-weight: 400;
+    background: var(--secondary);
+    padding: 0;
+    margin: 0;
+    color: var(--text);
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Noto Naskh Arabic';
-  font-weight: 700;
+    font-family: 'Noto Naskh Arabic';
+    font-weight: 700;
 }
 
-html {font-size: 100%;} /* 16px */
+html {
+    font-size: 100%; /* 16px */
+}
 
-h1 {font-size: 3.366rem; /* 53.92px */}
+h1 {
+    font-size: 3.366rem; /* 53.92px */
+}
 
-h2 {font-size: 2.525rem; /* 40.32px */}
+h2 {
+    font-size: 2.525rem; /* 40.32px */
+}
 
-h3 {font-size: 1.894rem; /* 30.24px */}
+h3 {
+    font-size: 1.894rem; /* 30.24px */
+}
 
-h4 {font-size: 1.421rem; /* 22.72px */}
+h4 {
+    font-size: 1.421rem; /* 22.72px */
+}
 
-h5 {font-size: 1.066rem; /* 17.12px */}
+h5 {
+    font-size: 1.066rem; /* 17.12px */
+}
 
-small {font-size: 0.600rem; /* 9.6px */}
+small {
+    font-size: 0.600rem; /* 9.6px */
+}
