--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Phoenician:wght@400&family=Noto+Naskh+Arabic:wght@700&display=swap');
 
+* {margin: 0; padding: 0;}
+
 :root[data-theme="light"] {
     --text: #060618;
     --background: #f4f4fb;
@@ -20,12 +22,10 @@ body {
     font-family: 'Noto Sans Phoenician';
     font-weight: 400;
     background: var(--secondary);
-    padding: 0;
-    margin: 0;
     color: var(--text);
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5{
     font-family: 'Noto Naskh Arabic';
     font-weight: 700;
 }
