--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,11 @@ nav {
     color: var(--accent);
 }
 
+.iconEdit {
+    color: red;
+    cursor: pointer;
+}
+
 .item {
     display: flex;
     align-items: center;
@@ -77,22 +82,39 @@ nav {
     height: 80%;
 }
 
+.title {
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title h4 {
+    margin: 0 10px;
+}
+
 .cvLeft {
     width: 70%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
 }
 
 .educationContainer {
     width: 100%;
-    height: 50%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .experienceContainer {
     width: 100%;
-    height: 50%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .cvRight {
@@ -113,10 +135,6 @@ nav {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-}
-
-h4 {
-    margin: 15px;
 }
 
 .skillsContainer .item {
